Build related stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -282,7 +282,7 @@ if(WIN32)
 			set(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${VERSION_STRING}-win32")
 		endif()
 
-		set(CPACK_GENERATOR 7Z)
+		set(CPACK_GENERATOR ZIP)
 	endif()
 elseif(APPLE)
 	set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY 0)
