--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -147,6 +147,7 @@ if(WIN32)
 		if(USE_LUAJIT)
 			set(LUA_DLL "" CACHE FILEPATH "Path to luajit-5.1.dll for installation (optional)")
 		endif()
+		set(PNG_DLL "" CACHE FILEPATH "Path to libpng16.dll for installation (optional)")
 	endif()
 else()
 	# Unix probably
@@ -641,6 +642,9 @@ if(WIN32)
 		endif()
 		if(LUA_DLL)
 			install(FILES ${LUA_DLL} DESTINATION ${BINDIR})
+		endif()
+		if(PNG_DLL)
+			install(FILES ${PNG_DLL} DESTINATION ${BINDIR})
 		endif()
 		if(BUILD_CLIENT AND USE_GETTEXT AND GETTEXT_DLL)
 			install(FILES ${GETTEXT_DLL} DESTINATION ${BINDIR})
