Build Android with CMake and with irrlicht from source

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,7 +66,7 @@ task prepareAssets() {
 			from "${projRoot}/client/shaders" into "${assetsFolder}/client/shaders"
 		}
 		copy {
-			from "../native/deps/armeabi-v7a/Irrlicht/Shaders" into "${assetsFolder}/client/shaders/Irrlicht"
+			from "${projRoot}/lib/irrlichtmt/media/Shaders" into "${assetsFolder}/client/shaders/Irrlicht"
 		}
 		copy {
 			from "${projRoot}/fonts" include "*.ttf" into "${assetsFolder}/fonts"
@@ -84,7 +84,7 @@ task prepareAssets() {
 }
 
 preBuild.dependsOn zipAssets
-prepareAssets.dependsOn ':native:getDeps'
+//prepareAssets.dependsOn ':native:getDeps'
 
 dependencies {
 	implementation project(':native')
