--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,6 +28,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y --no-install-recommends gettext openjdk-11-jdk-headless
+        git clone https://github.com/rollerozxa/irrlicht-vmc lib/irrlichtmt --depth 1
     - name: Build with Gradle
       run: cd android; ./gradlew assemblerelease
     - name: Save arm64 artifact
