--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,9 +29,6 @@ on:
       - 'Dockerfile'
       - '.dockerignore'
 
-env:
-  MINETEST_POSTGRESQL_CONNECT_STRING: 'host=localhost user=minetest password=minetest dbname=minetest'
-
 jobs:
   # Current gcc version
   gcc_12:
@@ -42,6 +39,7 @@ jobs:
         run: |
           source ./util/ci/common.sh
           install_linux_deps g++-12 libluajit-5.1-dev
+          git clone https://github.com/rollerozxa/irrlicht-vmc lib/irrlichtmt --depth 1
 
       - name: Build
         run: |
