Improve Windows build packaging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,8 +155,11 @@ endif()
 
 if(WIN32)
 	set(SHAREDIR ".")
-	set(BINDIR "bin")
-	set(DOCDIR "doc")
+	if(RUN_IN_PLACE)
+		set(BINDIR "bin")
+	else()
+		set(BINDIR ".")
+	endif()
 	set(EXAMPLE_CONF_DIR ".")
 	set(LOCALEDIR "locale")
 elseif(APPLE)
@@ -164,15 +167,11 @@ elseif(APPLE)
 	set(BUNDLE_PATH "${BUNDLE_NAME}")
 	set(BINDIR ${BUNDLE_NAME}/Contents/MacOS)
 	set(SHAREDIR ${BUNDLE_NAME}/Contents/Resources)
-	set(DOCDIR "${SHAREDIR}/${PROJECT_NAME}")
-	set(EXAMPLE_CONF_DIR ${DOCDIR})
 	set(LOCALEDIR "${SHAREDIR}/locale")
 elseif(UNIX) # Linux, BSD etc
 	if(RUN_IN_PLACE)
 		set(SHAREDIR ".")
 		set(BINDIR "bin")
-		set(DOCDIR "doc")
-		set(EXAMPLE_CONF_DIR ".")
 		set(MANDIR "unix/man")
 		set(XDG_APPS_DIR "unix/applications")
 		set(ICONDIR "unix/icons")
@@ -181,9 +180,7 @@ elseif(UNIX) # Linux, BSD etc
 		include(GNUInstallDirs)
 		set(SHAREDIR "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DATADIR}/${PROJECT_NAME}")
 		set(BINDIR "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_BINDIR}")
-		set(DOCDIR "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DOCDIR}")
 		set(MANDIR "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_MANDIR}")
-		set(EXAMPLE_CONF_DIR ${DOCDIR})
 		set(XDG_APPS_DIR "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DATADIR}/applications")
 		set(ICONDIR "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DATADIR}/icons")
 		set(LOCALEDIR "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LOCALEDIR}")
@@ -202,25 +199,10 @@ if(NOT CUSTOM_BINDIR STREQUAL "")
 	message(STATUS "Using BINDIR=${BINDIR}")
 endif()
 
-set(CUSTOM_DOCDIR "" CACHE STRING "Directory to install documentation into")
-if(NOT CUSTOM_DOCDIR STREQUAL "")
-	set(DOCDIR "${CUSTOM_DOCDIR}")
-	if(NOT RUN_IN_PLACE)
-		set(EXAMPLE_CONF_DIR ${DOCDIR})
-	endif()
-	message(STATUS "Using DOCDIR=${DOCDIR}")
-endif()
-
 set(CUSTOM_MANDIR "" CACHE STRING "Directory to install manpages into")
 if(NOT CUSTOM_MANDIR STREQUAL "")
 	set(MANDIR "${CUSTOM_MANDIR}")
 	message(STATUS "Using MANDIR=${MANDIR}")
-endif()
-
-set(CUSTOM_EXAMPLE_CONF_DIR "" CACHE STRING "Directory to install example config file into")
-if(NOT CUSTOM_EXAMPLE_CONF_DIR STREQUAL "")
-	set(EXAMPLE_CONF_DIR "${CUSTOM_EXAMPLE_CONF_DIR}")
-	message(STATUS "Using EXAMPLE_CONF_DIR=${EXAMPLE_CONF_DIR}")
 endif()
 
 set(CUSTOM_XDG_APPS_DIR "" CACHE STRING "Directory to install .desktop files into")
@@ -276,15 +258,13 @@ if(WIN32)
 	# Include all dynamically linked runtime libraries such as MSVCRxxx.dll
 	include(InstallRequiredSystemLibraries)
 
-	if(RUN_IN_PLACE)
-		if(CMAKE_SIZEOF_VOID_P EQUAL 8)
-			set(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${VERSION_STRING}-win64")
-		else()
-			set(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${VERSION_STRING}-win32")
-		endif()
-
-		set(CPACK_GENERATOR ZIP)
+	if(CMAKE_SIZEOF_VOID_P EQUAL 8)
+		set(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${VERSION_STRING}-win64")
+	else()
+		set(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${VERSION_STRING}-win32")
 	endif()
+
+	set(CPACK_GENERATOR ZIP)
 elseif(APPLE)
 	set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY 0)
 	set(CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${VERSION_STRING}-osx")
